[metadata]
name = stitchr
version = 1.1.0
author = Jamie Heather
author_email = jheather@mgh.harvard.edu
description = Stitch together coding TCR sequences from V/J/CDR3 information
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JamieHeather/stitchr
project_urls =
bug tracker = https://github.com/JamieHeather/stitchr/issues
classifiers =
programming language :: Python :: 3
license :: OSI Approved :: MIT License
operating system :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    IMGTgeneDL>=0.5.2
    importlib-resources>=1.1.0

[options.packages.find]
where = src

[options.package_data]
* = *.txt, *.rst, *.tsv, *.fasta, *.png

[options.entry_points]
console_scripts =
    stitchr = Scripts.stitchr:main
    thimble = Scripts.thimble:main
    gui_stitchr = Scripts.gui_stitchr:main
    stitchrdl = Scripts.stitchrdl:main

[options.extras_require]
docs =
  sphinx<5.0
  myst_parser
  pydata_sphinx_theme
  sphinx_markdown_tables
  sphinx_rtd_theme
  sphinxcontrib-mermaid
